Sprint 15 - Some changes have been made to pass the Postman collection tests.